@@ -330,76 +330,6 @@ do
 	echo "${a}typedef $i $t;$z"
 done
 
-cat <<'EOF'
-
-/* Comment out the keyword definitions below if the keywords work.  */
-EOF
-
-for i in const volatile
-do
-	$ech >&3 "$0: configuring $i $dots"
-	cat >a.c <<EOF
-#	include "$A_H"
-	int main();
-	enum Boolean { false, true };
-	int hpux8_05barf();
-	static enum Boolean $i zero;
-	int hpux8_05barf(x) int x; { return x; }
-	static enum Boolean $i * $i azero = &zero;
-	static enum Boolean $i * $i * $i aazero = &azero;
-	static enum Boolean * $i arzero[1];
-	static sig_atomic_t $i sigzero;
-	int sco3_2v4barf() {
-		/* SCO 3.2v4 native compiler barfs on this.  */
-		char *t;
-		char $i *s = 0 ? (char *)0 : (char $i *)0;
-		*t++ = '\0';
-	}
-	int main() {
-		enum Boolean *p = arzero[sigzero];
-		switch (zero) {
-			case false: return (!p || **aazero);
-			default: return (hpux8_05barf(1));
-		}
-	}
-EOF
-	a= z= ok='broken'
-	$PREPARE_CC || exit
-	if $CS a.c $LS >&2 && $CS_OK
-	then
-		cat >a.c <<EOF
-			char $i *p;
-			char *q;
-			typedef unsigned char $i *Iptr_type;
-			struct { Iptr_type lim; } s, *f = &s;
-			int main() {
-				Iptr_type lim;
-				lim = f->lim;
-				p = p == q ? p : "";
-				p = p == "" ? p : q;
-				return !!lim;
-			}
-EOF
-		$PREPARE_CC || exit
-		if $CS a.c $LS >&2 && $CS_OK
-		then
-			case $i in
-			const)
-				# Check for common execv misdeclaration.
-				cat >a.c <<EOF
-#					include "$A_H"
-					static char * const *p;
-					int main() { return execv("/bin/sh", p); }
-EOF
-				$PREPARE_CC || exit
-				$CS a.c $LS >&2 && $CS_OK
-			esac && a='/* ' z=' */' ok=OK
-		fi
-	fi
-	echo >&3 $ok
-	echo "$a#define $i$z"
-done
-
 cat - <<EOF
 
 #if O_BINARY
